--- a/GitUseExample/en.lproj/MainStoryboard.storyboard
+++ b/GitUseExample/en.lproj/MainStoryboard.storyboard
@@ -25,10 +25,17 @@
                                     <action selector="clickTheButton:" destination="2" eventType="touchUpInside" id="Sgn-32-0KT"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="This label will show up in the trunk" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUs-73-SE6">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fRO-5r-sxy" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="Rof-T1-h21"/>
+                            <constraint firstItem="lUs-73-SE6" firstAttribute="centerX" secondItem="fRO-5r-sxy" secondAttribute="centerX" type="default" id="WVj-pV-QbW"/>
+                            <constraint firstAttribute="bottom" secondItem="lUs-73-SE6" secondAttribute="bottom" constant="194" id="eXS-j0-Dyl"/>
                             <constraint firstItem="fRO-5r-sxy" firstAttribute="top" secondItem="3" secondAttribute="top" constant="252" id="syp-6c-RbO"/>
                         </constraints>
                     </view>
@@ -37,6 +44,17 @@
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="clickTheButton:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
